<resources>
    <string name="app_name">PrototipoEDP</string>
    <string name="app_name_real">Hambroid</string>
    <string name="login_name">Nombre de usuario</string>
    <string name="login_pass">Contraseña</string>
    <string name="login_btn">Iniciar sesion</string>
    <string name="home_hello">Bienvenido %1s</string>
    <string name="home_ordenar">Ordenar</string>
    <string name="home_pedidos">Pedidos</string>
    <string name="home_contacto">Contacto</string>
    <string name="contacto_nombre">Nombre</string>
    <string name="contacto_email">Email</string>
    <string name="contacto_sexo">Sexo</string>
    <string name="contacto_edad">Edad</string>
    <string name="contacto_btn">Enviar</string>
    <string name="contacto_title">Contacto</string>
    <string name="pedidos_title">Pedidos</string>
    <string name="orden_local_btn">Enviar</string>
    <string name="orden_agregar_btn">Agregar</string>
    <string name="orden_confirmar_btn">Confirmar</string>
    <string name="confirmar_title">Confirmar</string>
    <string name="confirmar_regresar">Regresar</string>
    <string name="home_local_administrar">Administrar Locales</string>
    <string name="admin_agregar">Agregar locales</string>
    <string name="admin_editar_menu">Editar menus</string>
    <string name="admin_editar_local">Editar locales</string>
    <string name="local">Matsui Sushi</string>
    <string-array name="contacto_sexo">
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>
    <string-array name="ordenar_comida_shushi">
        <item>Bandeja 10 piezas $6000</item>
        <item>Bandeja 15 piezas $10000</item>
        <item>Bandeja 20 piezas $12000</item>
        <item>Bandeja 30 piezas $15000</item>
    </string-array>
    <string name="title_activity_mapa_locales">Locales</string>
</resources>
