<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Home">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/home_hello"
        android:textColor="@color/colorTextBody"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="118dp"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:onClick="pedidos"
        android:text="@string/home_pedidos"
        android:textColor="@color/colorNavText"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="133dp"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:onClick="contacto"
        android:text="@string/home_contacto"
        android:textColor="@color/colorNavText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="148dp"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:onClick="ordenar"
        android:text="@string/home_ordenar"
        android:textColor="@color/colorNavText"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>